--- a/JYS/manifest.plist
+++ b/JYS/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ykwade.github.io/cjq.github.io/jys.ipa</string>
+					<string>https://ykwade.github.io/cjq.github.io/jys/jys.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
