--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ykwade.github.io/cjq.github.io/jys.ipa</string>
+					<string>https://summerhotsi.github.io/iosIpa/jys.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://ykwade.github.io/cjq.github.io/57.png</string>
+					<string>https://summerhotsi.github.io/iosIpa/57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://ykwade.github.io/cjq.github.io/1024.png</string>
+					<string>https://summerhotsi.github.io/iosIpa/1024.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
